# workskill-safe

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CONTEXTUAL_REIDENTIFICATION_CHECKLIST.md  DATA_CLASSIFICATION.md  MAINTENANCE_EVIDENCE.md  PILOT_PLAN.md  PROJECT_SPEC.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  THREAT_MODEL.md
docs/zh-TW/: CODEX_HANDOFF.md  CONTEXTUAL_REIDENTIFICATION_CHECKLIST.md  MAINTAINER_GUIDE.md  PILOT_GUIDE.md  PRIVACY_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SPEC.md
examples/: expected-sanitized-note.md  synthetic-work-note.md
pilots/proposal-process/: pilot-result.md  second-case-result.md  second-case.md  synthetic-proposal-case.md
skills/proposal-flow-review-ready/: SKILL.md
skills/proposal-flow-review-ready/references/: output-schema.md  quality-checklist.md  workflow.md
skills/work-log-to-skill/: SKILL.md
skills/work-log-to-skill/references/: quality-checklist.md
src/workskill_safe/: __init__.py  __main__.py  cli.py  models.py  rules.py  sanitizer.py  scaffolder.py  scanner.py  validator.py
tasks/: 01_BOOTSTRAP.md  02_IMPLEMENT_MVP.md  03_TEST_RELEASE.md
tests/: test_cli.py  test_critical_rule.py  test_no_network.py  test_proposal_workflow.py  test_sanitizer.py  test_scaffold_validator.py  test_scanner.py
(+1 files in other folders)
